# team3-vip-f24

./: .gitignore  README.md  update.sh  update_run.sh  venv_activate.sh
src/reactive_racing/: README.md  package.xml  setup.cfg  setup.py
src/reactive_racing/launch/: race.launch.py
src/reactive_racing/reactive_racing/: compute_control.py  detector.py  fpn.py  perceive_boundaries.py  utils.py  zed2_custom_node.py
src/reactive_racing/reactive_racing/yolo_config/: yolov5m.cfg
